fix(styles): align carousel and form to design

--- a/src/styles/partials/_consultings.scss
+++ b/src/styles/partials/_consultings.scss
@@ -83,6 +83,24 @@
                     @include shared-input-style;
                     width: 100%;
                     height: 102px;
+                    overflow-y: auto;
+                    cursor: pointer;
+                    // Ensure scrolling is enabled
+
+                    // Custom Scrollbar Styling
+                    &::-webkit-scrollbar {
+                      width: 8px; // Scrollbar width
+                    }
+                
+                    &::-webkit-scrollbar-thumb {
+                      background-color: $blue; // Blue color for scrollbar
+                      border-radius: 10px; // Rounded scrollbar
+                    }
+                
+                    &::-webkit-scrollbar-track {
+                      background-color: #f0f0f0; // Track background color
+                    }
+
                 }
             }
         }
